syntax = "proto3";

package com.criss.wang.entity.proto;

option java_outer_classname="ParentMessageProto";

import "google/protobuf/any.proto";

message ParentMessage {
  string text = 1;
  google.protobuf.Any childMessage = 2;
}

message ChildMessage{
	string text = 1;
}